--- a/team.html
+++ b/team.html
@@ -158,7 +158,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/paris.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Paris"><img src="assets/img/team/paris.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Paris Cai</h4>
                 <span>Founder and President</span>
@@ -172,7 +172,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Fiona"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Fiona MacDougall</h4>
                 <span>Vice President</span>
@@ -185,7 +185,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Leah"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
@@ -200,7 +200,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Sammi"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sammi Wang</h4>
                 <span>Fiance and Accounting Director</span>
@@ -213,7 +213,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Julian"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid"
+                  alt=""></div>
               <div class="member-info">
                 <h4>Julianne Alves</h4>
                 <span>Quality Assurance Director</span>
@@ -226,7 +227,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Grace"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Grace Qiu</h4>
                 <span>Quality Assurance Team Member</span>
@@ -239,7 +241,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/Neha.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Neha</h4>
                 <span>Quality Assurance Manager</span>
@@ -253,7 +255,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Gurman Sahota</h4>
                 <span>Volunteers Director</span>
@@ -266,7 +269,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Kaniesa"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Kaniesa</h4>
                 <span>Volunteers Manager</span>
@@ -280,7 +284,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Diya.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Diya"><img src="assets/img/team/Diya.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Diya</h4>
                 <span>Volunteers Manager</span>
@@ -293,7 +297,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Anne"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Anne Zhang</h4>
@@ -307,7 +311,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/Devanga Dassnayake.JPG" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Devanga"><img src="assets/img/team/Devanga Dassnayake.JPG"
+                  class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Devanga Dassnayake</h4>
@@ -321,7 +326,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="MyChau"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>MyChau Tight</h4>
                 <span>Students and Pairing Manager</span>
@@ -334,7 +340,8 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/Mathusha.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Mathusha"><img src="assets/img/team/Mathusha.jpg" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Mathusha</h4>
                 <span>Students and Pairing Manager</span>
@@ -348,7 +355,7 @@
 
           <div class="col-lg-3 col-md-6  ">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/me.jpg" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Mariya"><img src="assets/img/team/me.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Mariya Turetska</h4>
                 <span>IT Director</span>
@@ -362,7 +369,8 @@
 
           <div class="col-lg-3 col-md-6 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Andrew"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Andrew Yang</h4>
                 <span>Tech Director</span>
@@ -376,7 +384,7 @@
 
           <div class="col-lg-3 col-md-6 ">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/feng.png" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Feng"><img src="assets/img/team/feng.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Feng Zhang</h4>
                 <span>Website Manager</span>
@@ -648,6 +656,8 @@
 
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
