fixed picture sizes and updated counts

--- a/team.html
+++ b/team.html
@@ -156,7 +156,7 @@
 
         <div class="row" data-aos="fade-left">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Paris"><img src="assets/img/team/paris.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -170,7 +170,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic" data-bioName="Fiona"><img src="assets/img/team/fiona.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -183,7 +183,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic" data-bioName="Leah"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
               </div>
@@ -198,7 +199,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Sammi"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -211,7 +212,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Julian"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid"
                   alt=""></div>
@@ -225,7 +227,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Grace"><img src="assets/img/team/Grace Qiu.jpg" class="img-fluid" alt="">
               </div>
@@ -239,7 +242,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -253,7 +256,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt="">
               </div>
@@ -267,7 +270,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Kaniesa"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt="">
               </div>
@@ -282,7 +285,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Diya"><img src="assets/img/team/Diya.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -295,7 +298,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Anne"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
               </div>
@@ -309,7 +312,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Devanga"><img src="assets/img/team/Devanga Dassnayake.JPG"
                   class="img-fluid" alt="">
@@ -324,7 +327,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="MyChau"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt="">
               </div>
@@ -338,7 +341,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Mathusha"><img src="assets/img/team/Mathusha.jpg" class="img-fluid" alt="">
               </div>
@@ -353,7 +356,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6  ">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic" data-bioName="Mariya"><img src="assets/img/team/me.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -367,7 +370,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 ">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Andrew"><img src="assets/img/team/andrew.JPG" class="img-fluid" alt="">
               </div>
@@ -382,9 +385,9 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 ">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic" data-bioName="Feng"><img src="assets/img/team/feng.png" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Feng"><img src="assets/img/team/feng.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Feng Zhang</h4>
                 <span>Website Manager</span>
