Changed navbar and added university panels page

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <!-- <li><a href="#function">Students</a></li> -->
           <li class="dropdown"><a href="#function"><span>Students</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
-              <li><a href="/refugee.html">Refugee Info</a>
+              <li><a href="/university-panel.html">University Info Panels</a>
 
             </ul>
           </li>
@@ -66,7 +66,12 @@
           </li>
         </ul>
         </li>
-        <li><a href="#events">Events</a></li>
+        <li class="dropdown"><a href="#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <a href="/university-panel.html">University Info Panels</a>
+            </li>
+          </ul>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="team.html">Our Team</a></li>
