--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -35,61 +35,74 @@
 <body>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top d-flex align-items-center header-transparent py-5">
-        <div class="container d-flex align-items-center justify-content-between">
+  <header id="header" class="fixed-top d-flex align-items-center header-transparent py-5">
+    <div class="container d-flex align-items-center justify-content-between">
 
-            <div class="logo">
-                <div class="together">
-                    <a href="index.html"><img src="assets/img/logo.png" alt="logo" class="img-fluid"></a>
-                    <h1 id="coc"><a href="index.html"><span>HomeworkHub - Code of Conduct</span></a></h1>
-                </div>
-            </div>
+      <div class="logo">
+        <div class="together">
+          <a href="index.html"><img src="assets/img/logo.png" alt="logo" class="img-fluid"></a>
+          <h1><a href="index.html"><span>HomeworkHub</span></a></h1>
+        </div>
+      </div>
 
-            <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a href="index.html#hero">Home</a></li>
-                    <!-- <li><a href="#function">Students</a></li> -->
-                    <li class="dropdown"><a href="index.html#function"><span>Students</span> <i
-                                class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a
-                                    href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
-                            </li>
-                            <li><a href="/refugee.html">Refugee Info</a>
-                        </ul>
-                    <li><a href="index.html#volunteers">Volunteers</a></li>
-                    <li><a href="index.html#intro">Events</a></li>
-                    <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="index.html#team">Our Team</a></li>
-                            <li><a href="index.html#donors">Our Partners</a></li>
-                            <li><a href="index.html#news">Our Features</a></li>
-                        </ul>
-                    <li><a href="index.html#real-testimonials">Testimonials</a></li>
-                    <li><a href="index.html#donations">Donate</a></li>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <!-- <li><a href="#function">Students</a></li> -->
+          <li class="dropdown"><a href="#function"><span>Students</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
+              </li>
+              <li><a href="/university-panel.html">University Info Panels</a>
 
-                    <!-- <li><div id="google_translate_element"></div></li -->
-                    <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#volunteers"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+          </li>
+        </ul>
+        </li>
+        <li class="dropdown"><a href="#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <a href="/university-panel.html">University Info Panels</a>
+            </li>
+          </ul>
+        <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="team.html">Our Team</a></li>
+            <li><a href="#donors">Our Partners</a></li>
+            <li><a href="#news">Our Features</a></li>
+          </ul>
+        <li><a href="#real-testimonials">Testimonials</a></li>
+        <li><a href="#donations">Donate</a></li>
+
+        <!-- <li><div id="goofgle_translate_element"></div></li -->
+        <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="index.html">French</a></li>
             </ul>
           </li> -->
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
 
-        </div>
+    </div>
 
-        <script type="text/javascript">
-            function googleTranslateElementInit() {
-                new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
-            }
-        </script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+      }
+    </script>
 
-        <script type="text/javascript"
-            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-    </header><!-- End Header -->
+  </header><!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
     <section id="hero">
