--- a/index.html
+++ b/index.html
@@ -548,6 +548,38 @@
     </section>
     <!-- End of Intro Program Section -->
 
+    <!-- Donate Section -->
+    <section id="features" class="features">
+      <div class="container">
+        <div class="section-title" data-aos="fade-up">
+          <h2 id="donations">Donations</h2>
+          <p>Become a HomeworkHub Donor Today!</p>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row">
+            <div
+              class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
+              data-aos="fade-left">
+              <h2>How to Donate?</h2>
+              <p>Donate to us through the PayPal link below!</p>
+              <h2>How are Donations Used?</h2>
+              <ul>
+                <li>Events</li>
+                <li>Organizational Platforms (such as this website)</li>
+                <li>Teaching Material</li>
+                <li>Other Expenses</li>
+              </ul>
+              <a href="https://www.paypal.com/donate?business=DRPWCU5CZ3J5J&amp;currency_code=CAD"><button
+                  class="donate">Donate Now</button></a>
+              <p><strong>Alternative: </strong>Email transfer your amount to <i>tutoring.homeworkhub@gmail.com</i>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End of Donate Section -->
 
     <!-- ======= Sponsors Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -722,50 +754,17 @@
       </div>
     </section><!-- End Sponsors Section -->
 
-    <!-- Donate Section -->
-    <section id="features" class="features">
-      <div class="container">
-        <div class="section-title" data-aos="fade-up">
-          <h2 id="donations">Donations</h2>
-          <p>Become a HomeworkHub Donor Today!</p>
-        </div>
-
-        <div class="container-fluid">
-          <div class="row">
-            <div
-              class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
-              data-aos="fade-left">
-              <h2>How to Donate?</h2>
-              <p>Donate to us through the PayPal link below!</p>
-              <h2>How are Donations Used?</h2>
-              <ul>
-                <li>Events</li>
-                <li>Organizational Platforms (such as this website)</li>
-                <li>Teaching Material</li>
-                <li>Other Expenses</li>
-              </ul>
-              <a href="https://www.paypal.com/donate?business=DRPWCU5CZ3J5J&amp;currency_code=CAD"><button
-                  class="donate">Donate Now</button></a>
-              <p><strong>Alternative: </strong>Email transfer your amount to <i>tutoring.homeworkhub@gmail.com</i>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End of Donate Section -->
 
     <!--  News Section -->
-    <section id="testimonials" class="testimonials">
+    <section id="news" class="news">
       <div class="container" id="donors">
         <div class="section-title ps-5" data-aos="fade-up">
-          <h2 id="donations">Publicity</h2>
+          <h2 class="subtitle">Publicity</h2>
           <p id="news">HomeworkHub on the News ...</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
-
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <h3>Rosemary Barton Show</h3>
@@ -861,8 +860,8 @@
 
           </div>
           <div class="swiper-pagination"></div>
-          <div class="swiper-button-prev" style="color: white"></div>
-          <div class="swiper-button-next" style="color: white"></div>
+          <div class="swiper-button-prev" style="color: #2b6777"></div>
+          <div class="swiper-button-next" style="color: #2b6777"></div>
         </div>
       </div>
     </section>
