--- a/volunteer.html
+++ b/volunteer.html
@@ -55,7 +55,7 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
-              <li><a href="/refugee.html">Refugee Info</a>
+              <li><a href="/university-panel.html">University Info Panels</a>
 
             </ul>
           </li>
@@ -67,10 +67,15 @@
           </li>
         </ul>
         </li>
-        <li><a href="index.html#events">Events</a></li>
+        <li class="dropdown"><a href="#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <a href="/university-panel.html">University Info Panels</a>
+            </li>
+          </ul>
+        </li>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="team.html">Our Team</a></li>
             <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
