added volunteer info

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -47,36 +47,48 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="index.html#hero">Home</a></li>
-                    <!-- <li><a href="#function">Students</a></li> -->
-                    <li class="dropdown"><a href="index.html#function"><span>Students</span> <i
-                                class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a
-                                    href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
-                            </li>
-                            <li><a href="/refugee.html">Refugee Info</a>
-                        </ul>
-                    <li><a href="index.html#volunteers">Volunteers</a></li>
-                    <li><a href="index.html#intro">Events</a></li>
-                    <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="index.html#team">Our Team</a></li>
-                            <li><a href="index.html#donors">Our Partners</a></li>
-                            <li><a href="index.html#news">Our Features</a></li>
-                        </ul>
-                    <li><a href="index.html#real-testimonials">Testimonials</a></li>
-                    <li><a href="index.html#donations">Donate</a></li>
-
-                    <!-- <li><div id="google_translate_element"></div></li -->
-                    <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="index.html">French</a></li>
-            </ul>
-          </li> -->
+                  <li><a href="index.html#hero">Home</a></li>
+                  <!-- <li><a href="#function">Students</a></li> -->
+                  <li class="dropdown"><a href="index.html#function"><span>Students</span> <i
+                        class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a
+                          href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
+                      </li>
+                      <li><a href="/refugee.html">Refugee Info</a>
+        
+                    </ul>
+                  </li>
+                  <li class="dropdown"><a href="volunteer.html"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a
+                          href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+                      </li>
+                      <li><a href="volunteer.html">Volunteer Information</a>
+                      </li>
+                  </li>
+                </ul>
+                </li>
+                <li><a href="index.html#events">Events</a></li>
+                <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
+                  <ul>
+                    <li><a href="team.html">Our Team</a></li>
+                    <li><a href="team.html">Our Team</a></li>
+                    <li><a href="index.html#donors">Our Partners</a></li>
+                    <li><a href="index.html#news">Our Features</a></li>
+                  </ul>
+                <li><a href="index.html#real-testimonials">Testimonials</a></li>
+                <li><a href="index.html#donations">Donate</a></li>
+        
+                <!-- <li><div id="goofgle_translate_element"></div></li -->
+                <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="index.html">French</a></li>
+                    </ul>
+                  </li> -->
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+              </nav><!-- .navbar -->
 
         </div>
 
