--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
               </li>
+              <li><a href="volunteer.html">Volunteer Information</a>
+              </li>
           </li>
         </ul>
         </li>
