--- a/refugee.html
+++ b/refugee.html
@@ -47,7 +47,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#hero">Home</a></li>
           <!-- <li><a href="#function">Students</a></li> -->
           <li class="dropdown"><a href="index.html#function"><span>Students</span> <i
                 class="bi bi-chevron-down"></i></a>
@@ -55,21 +55,24 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
-              <li><a href="#">Refugee Info</a>
+              <li><a href="/refugee.html">Refugee Info</a>
+
             </ul>
           </li>
-          <li class="dropdown"><a href="index.html#volunteers"><span>Volunteers</span> <i
-                class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="volunteer.html"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+              <li><a href="volunteer.html">Volunteer Information</a>
               </li>
           </li>
         </ul>
         </li>
         <li><a href="index.html#events">Events</a></li>
-        <li class="dropdown"><a href="index.html#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
