--- a/team.html
+++ b/team.html
@@ -59,11 +59,12 @@
 
             </ul>
           </li>
-          <li class="dropdown"><a href="index.html#volunteers"><span>Volunteers</span> <i
-                class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="volunteer.html"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+              <li><a href="volunteer.html">Volunteer Information</a>
               </li>
           </li>
         </ul>
@@ -71,6 +72,7 @@
         <li><a href="index.html#events">Events</a></li>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
+            <li><a href="team.html">Our Team</a></li>
             <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
