--- a/volunteer.html
+++ b/volunteer.html
@@ -59,10 +59,12 @@
 
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="volunteer.html"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSecAWrA9XmRFuKeeElm8SS5E09MsU5nLyrujhs0FRg2w1Glnw/viewform">Register</a>
+              </li>
+              <li><a href="volunteer.html">Volunteer Information</a>
               </li>
           </li>
         </ul>
