--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <li><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
               </li>
-              <li><a href="/refugee.html">Refugee Info</a>
+              <li><a href="#">University Panel</a>
 
             </ul>
           </li>
