added upenn panel

--- a/team.html
+++ b/team.html
@@ -205,20 +205,6 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic" data-bioName="Sammi"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sammi Wang</h4>
-                <span>Fiance and Accounting Director</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Julian"><img src="assets/img/team/Juliane Alves.jpeg" class="img-fluid"
@@ -240,7 +226,7 @@
               </div>
               <div class="member-info">
                 <h4>Grace Qiu</h4>
-                <span>Quality Assurance Team Member</span>
+                <span>Quality Assurance Director</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -398,6 +384,20 @@
                 <h4>Feng Zhang</h4>
                 <span>Website Manager</span>
                  <!-- <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic" data-bioName="Sammi"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Sammi Wang</h4>
+                <span>Fiance and Accounting Director</span>
+                <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div> -->
