--- a/university-panel.html
+++ b/university-panel.html
@@ -201,6 +201,8 @@
           <!-- <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
               <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
             </div> -->
+
+          <!-- SE PANEL -->
           <div class="row">
             <div class="icon-boxes d-flex flex-column py-5 px-lg-5 justify-content-center align-items-center"
               data-aos="fade-left">
@@ -208,9 +210,26 @@
               <p>
                 UW and UofT Software Engineering Panel, <strong>September 25th at 5:00 PM EST!</strong>
               </p>
-              <img data-aos="fade-down" src="./assets/img/other/university-panel-poster.png" alt="refugee image 2"
+              <img data-aos="fade-down" src="./assets/img/other/university-panel-poster.png" alt="se panel"
                 srcset="" class="img-fluid rounded-3 mb-5" width="400">
               <a href="https://forms.gle/YYW2sDNNWXxJfYis7">
+                <button class="reg">Register Here!</button>
+              </a>
+
+            </div>
+          </div>
+
+          
+          <!-- UPENN PANEL -->
+          <div class="row">
+            <div class="icon-boxes d-flex flex-column py-5 px-lg-5 justify-content-center align-items-center"
+              data-aos="fade-left">
+              <p>
+                My Experience at the Wharton Business School at the University of Pennsylvania, <strong>October 2nd from 7:00 PM EST</strong>
+              </p>
+              <img data-aos="fade-down" src="./assets/img/other/UPennPanel.png" alt="upenn panel"
+                srcset="" class="img-fluid rounded-3 mb-5" width="400">
+              <a href="https://forms.gle/7683Sa244QitCYug7">
                 <button class="reg">Register Here!</button>
               </a>
 
