--- a/university-panel.html
+++ b/university-panel.html
@@ -58,6 +58,13 @@
               <li><a href="/university-panel.html">University Info Panels</a>
 
             </ul>
+            <ul>
+              <li><a
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
+              </li>
+              <li><a href="/refugee.html">Refugee Info</a>
+
+            </ul>
           </li>
           <li class="dropdown"><a href="/volunteer.html"><span>Volunteers</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
