--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
               <a href="university-panel.html" class="btn-get-started scrollto m-2">University Panel</a>
+              <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
             </div>
           </div>
         </div>
