--- a/team.html
+++ b/team.html
@@ -126,6 +126,7 @@
               <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="m-2 btn-get-started scrollto">Become a Tutor</a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
+              <a href="university-panel.html" class="btn-get-started scrollto m-2">University Panel</a>
               <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
             </div>
           </div>
