events added w/ images

--- a/index.html
+++ b/index.html
@@ -555,6 +555,27 @@
               </div>
             </div>
 
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Laurier Volunteers Fair!</h1>
+                <div class="d-flex justify-content-center align-items-center">
+                  A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for inviting
+                  HomeworkHub to their University Fair!
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Compass RIDE for Refugee</h1>
+                <div class="d-flex justify-content-center align-items-center">
+                  Thank you to our community partner <a href="https://compassrefugee.ca/">Compass Refugee</a> for
+                  inviting HomeworkHub to their annual RIDE for
+                  Refuge event!
+
+                </div>
+              </div>
+            </div>
+
           </div>
           <div class="swiper-pagination"></div>
           <div class="swiper-button-prev" style="color: white"></div>
