--- a/index.html
+++ b/index.html
@@ -558,7 +558,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Laurier Volunteers Fair!</h1>
-                <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <img class="rounded-3" width="450" src="assets/img/other/laurierevent.JPG">
                   A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for inviting
                   HomeworkHub to their University Fair!
                 </div>
@@ -567,7 +568,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Compass RIDE for Refugee</h1>
-                <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <img class="rounded-3" src="assets/img/other/Compassrideevent.JPG">
                   Thank you to our community partner <a href="https://compassrefugee.ca/">Compass Refugee</a> for
                   inviting HomeworkHub to their annual RIDE for
                   Refuge event!
