removed the wrong registration link

--- a/university-panel.html
+++ b/university-panel.html
@@ -227,7 +227,7 @@
               Our guest panelists, Prem Mehta-Spooner from Queen's University's Commerce Program and Jane Huang from Western University's IVEY Business School will discuss their experience applying to and attending top business programs in Canada! 
             </p>
 
-            <a href="https://forms.gle/7683Sa244QitCYug7">
+            <a href="">
               <button class="reg mb-5">Register Here!</button>
             </a>
 
