add registration link

--- a/university-panel.html
+++ b/university-panel.html
@@ -227,7 +227,7 @@
               Our guest panelists, Prem Mehta-Spooner from Queen's University's Commerce Program and Jane Huang from Western University's IVEY Business School will discuss their experience applying to and attending top business programs in Canada! 
             </p>
 
-            <a href="">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeVGOx9n2Rzr2-7GxfqDRFzNUdql5yf2nbagT3LAcqT_GB0nA/viewform?usp=sf_link ">
               <button class="reg mb-5">Register Here!</button>
             </a>
 
