--- a/team.html
+++ b/team.html
@@ -258,6 +258,20 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Tahmina"><img src="assets/img/team/Tahmina.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Tahmina Faez</h4>
+                <span>Tutors and Volunteers Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
@@ -391,7 +405,7 @@
               <div class="member-info">
                 <h4>Feng Zhang</h4>
                 <span>Website Manager</span>
-                 <!-- <div class="social">
+                <!-- <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div> -->
@@ -412,7 +426,7 @@
               </div>
             </div>
           </div>
-          
+
         </div>
 
       </div>
