bio + pic size fix

--- a/team.html
+++ b/team.html
@@ -272,7 +272,8 @@
           </div>
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" width="6000"
+                  class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Gurman Sahota</h4>
@@ -399,7 +400,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-3">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Feng"><img src="assets/img/team/feng.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -413,7 +414,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-3">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Sammi"><img src="assets/img/team/sammi.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
