fixed iphone se formatting

--- a/team.html
+++ b/team.html
@@ -84,7 +84,6 @@
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="team.html">Our Team</a></li>
-            <li><a href="team.html">Our Team</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
           </ul>
@@ -258,20 +257,6 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Tahmina"><img src="assets/img/team/Tahmina.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Tahmina Faez</h4>
-                <span>Tutors and Volunteers Director</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Gurman"><img src="assets/img/team/Gurman.jpg" width="6000"
                   class="img-fluid" alt="">
               </div>
@@ -285,6 +270,22 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Tahmina"><img src="assets/img/team/Tahmina.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Tahmina Faez</h4>
+                <span>Volunteers Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Kaniesa"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt="">
