--- a/index.html
+++ b/index.html
@@ -457,11 +457,12 @@
         </div>
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Intro to Finance </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" width="300" src="assets/img/introtofinance.png">
+                  <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="300" src="assets/img/introtofinance.png">
                   <p class="w-75 mt-2" style="font-style: normal;">The intro to Finance lecture, also given to SHAD
                     Canada students last summer, introduced the fundamentals of business and market competition which
                     has been extensively studied in economics and business domains. Through a series of fun examples,
@@ -469,12 +470,11 @@
                     economic and business contexts while also having the opportunity to attend a lecture hosted by
                     Laurier University professor of marketing Martin Qiu. A big THANK YOU to you Professor Qiu for your
                     kindness and support!
-
-
                   </p>
                 </div>
               </div>
             </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Ho Ho HomeworkHub</h1>
@@ -525,17 +525,15 @@
                 </div>
               </div>
             </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column justify-content-center align-items-center">
                 <h1 id="intro">Compass Codes</h1>
-                <div class="d-flex align-items-center w-75">
-                  <img class="rounded-3 w-25" src="assets/img/other/compass_codes.png">
-                  <p class="ms-4 non-ti">Compass Codes is a 2-month long, FREE introductory coding program hosted in
-                    partnership with
-                    Compass
-                    Tutoring. This program, brought to you by our very best computer science tutors Charles Zhang and
-                    Feng
-                    Zhang, will host fun, engaging, and hands-on lessons to teach students grade 5 to 10 the basics of
+                <div class="d-flex w-75 flex-wrap justify-content-center" id="compass-codes">
+                  <img class="rounded-3 img-fluid" src="assets/img/other/compass_codes.png">
+                  <p class="w-75 mt-2 font-monospace">Compass Codes is a 2-month long, FREE introductory coding program hosted in
+                    partnership with Compass Tutoring. This program, brought to you by our very best computer science tutors Charles Zhang and
+                    Feng Zhang, will host fun, engaging, and hands-on lessons to teach students grade 5 to 10 the basics of
                     computer science, web-development, and user-friendly and dynamic web-applications.
                   </p>
                 </div>
@@ -558,22 +556,22 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Laurier Volunteers Fair!</h1>
-                <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="d-flex flex-column justify-content-center align-items-center" id="volunteer-fair">
                   <img class="rounded-3" width="450" src="assets/img/other/laurierevent.JPG">
                   A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for inviting
                   HomeworkHub to their University Fair!
                 </div>
               </div>
             </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Compass RIDE for Refugee</h1>
-                <div class="d-flex flex-column justify-content-center align-items-center">
+                <div class="d-flex flex-column justify-content-center align-items-center" id="compass-ride">
                   <img class="rounded-3" src="assets/img/other/Compassrideevent.JPG">
                   Thank you to our community partner <a href="https://compassrefugee.ca/">Compass Refugee</a> for
                   inviting HomeworkHub to their annual RIDE for
                   Refuge event!
-
                 </div>
               </div>
             </div>
